correcting middleware for jmeter requests